Bug 1430856 - Cache CaptureCapability in CapabilityCandidate. r=jib

This will lead to less ipc calls, hopefully speeding up getUserMedia for many
devices.

This also lets us inject any hardcoded capabilities into the candidateSet in
the future (read: next patch).

MozReview-Commit-ID: HjIhRK1nVA1

--HG--
extra : rebase_source : f58e16c45f7bd6738ce0a0527dc86854f804bc7b